<?xml version="1.0" encoding="iso-8859-1"?>
<resources>
<string name="app_name">DroidArcadia</string>
<string name="about">About DroidArcadia</string>
<string name="description">An emulator of Signetics-based machines</string>
<string name="copyright">© Copyright 2023-2026 James Jacobs of Amigan Software</string>
<string name="translator">English translation by James Jacobs</string>
<string name="compiler">Compiler: Android Studio Meerkat</string>
<string name="runningon">Running on</string>
<string name="architecture">CPU architecture</string>
<string name="start">START</string>
<string name="select">SELECT</string>
<string name="reset">RESET</string>
<string name="load">Load...</string>
<string name="pause">Pause</string>
<string name="unpause">Unpse</string>
<string name="more">More...</string>
<string name="quit">Quit</string>
<string name="gameinfo">Game Information</string>
<string name="creditsyear">Credits, Year</string>
<string name="reference">Reference</string>
<string name="gamingguide">Gaming Guide...</string>
<string name="arcadiahiscores">Emerson Arcadia 2001 High Scores</string>
<string name="coinophiscores">Coin-op High Scores</string>
<string name="clearhighscores">Clear high scores</string>
<string name="commandsplusoptions">Commands + Options</string>
<string name="reset2">Reset</string>
<string name="resetted">Resetted</string>
<string name="quickload">Quickload state</string>
<string name="quickloaded">Quickloaded state</string>
<string name="quicksave">Quicksave state</string>
<string name="quicksaved">Quicksaved state</string>
<string name="savescreenshot">Save screenshot as GIF</string>
<string name="savedscreenshot">Saved screenshot as GIF</string>
<string name="colours_pure">Colours: Pure</string>
<string name="colours_uvi">Colours: UVI (for Arcadia)</string>
<string name="colours_pvi">Colours: PVI (for Interton/Elektor)</string>
<string name="colours_greyscale">Colours: Greyscale</string>
<string name="artefacts">Artefacts</string>
<string name="stretching_off">Stretching: Off</string>
<string name="stretching_small">Stretching: 4:3 small</string>
<string name="stretching_large">Stretching: 4:3 large</string>
<string name="stretching_maximum">Stretching: Maximum</string>
<string name="dejitterhorizons">Dejitter horizons</string>
<string name="enhancedskies">Enhanced skies</string>
<string name="fillintersections">Fill intersections</string>
<string name="autofire_off">Autofire: Off</string>
<string name="autofire_pressed">Autofire: On while pressed</string>
<string name="autofire_always">Autofire: On always</string>
<string name="controller_right">Touch controller: Right</string>
<string name="controller_left">Touch controller: Left</string>
<string name="forcefeedback">Force feedback</string>
<string name="layout_keypadpaddle">Layout: Keypad, paddle</string>
<string name="layout_paddlekeypad">Layout: Paddle, keypad</string>
<string name="size_off">Keypad/paddle size: Off</string>
<string name="size_28mm">Keypad/paddle size: 28 mm</string>
<string name="size_160dp">Keypad/paddle size: 160 dp</string>
<string name="size_240px">Keypad/paddle size: 240 px</string>
<string name="size_maximum">Keypad/paddle size: Maximum</string>
<string name="paddle_0">Paddle layout: Unused</string>
<string name="paddle_2h">Paddle layout: 2-way horizontal</string>
<string name="paddle_2v">Paddle layout: 2-way vertical</string>
<string name="paddle_4o">Paddle layout: 4-way orthagonal</string>
<string name="paddle_4d">Paddle layout: 4-way diagonal</string>
<string name="paddle_8">Paddle layout: 8-way</string>
<string name="paddle_analog">Paddle layout: Analog</string>
<string name="springloadedpaddles">Spring-loaded paddles</string>
<string name="speed">Speed</string>
<string name="normal">normal</string>
<string name="turbo">Turbo</string>
<string name="region_pal">Region: PAL</string>
<string name="region_ntsc">Region: NTSC</string>
<string name="indicator">Speed indicator</string>
<string name="off2">Off</string>
<string name="fps">FPS</string>
<string name="khz">kHz</string>
<string name="percentage">Percentage</string>
<string name="frameskipping">Frame skipping</string>
<string name="sound">Sound</string>
<string name="off">off</string>
<string name="volume">Volume</string>
<string name="loud">loud</string>
<string name="silent">silent</string>
<string name="quiet">quiet</string>
<string name="retunetones">Retune tones</string>
<string name="collisions">Collisions</string>
<string name="demultiplexing">Demultiplexing</string>
<string name="unlimitedlives">Unlimited lives</string>
<string name="unlimitedtime">Unlimited time/ammo</string>
<string name="invincibility">Invincibility</string>
<string name="skiplevel">Skip level</string>
<string name="skippedlevel">Skipped level</string>
<string name="highscoretable2">High score table...</string>
<string name="gameinfo2">Game information...</string>
<string name="about2">About DroidArcadia...</string>
<string name="back">&#x2190; Back</string>
<string name="savedscreenshotas">Saved screenshot as</string>
<string name="cantallocatechannel">Can\'t allocate sound channel</string>
<string name="cantskiplevel">Can\'t skip level (unsupported game)!</string>
<string name="cantload">Can\'t load</string>
<string name="cantread">Can\'t read</string>
<string name="cantparse">Can\'t parse</string>
<string name="cantsave">Can\'t save</string>
<string name="doesntexist">doesn\'t exist</string>
<string name="error">error</string>
<string name="lock">Lock orientation</string>
<string name="autoframeskip">Increment frame skipping automatically when needed</string>
<string name="coinopoptions">Coin-op options...</string>
<string name="coinopoptions2">Coin-op Options</string>
<string name="coina_half">Coin A: Half credit</string>
<string name="coina_1">Coin A: 1 credit</string>
<string name="coina_2">Coin A: 2 credits</string>
<string name="coina_3">Coin A: 3 credits</string>
<string name="coina_5">Coin A: 5 credits</string>
<string name="coinb_half">Coin B: Half credit</string>
<string name="coinb_1">Coin B: 1 credit</string>
<string name="coinb_2">Coin B: 2 credits</string>
<string name="coinb_3">Coin B: 3 credits</string>
<string name="coinb_5">Coin B: 5 credits</string>
<string name="coinb_7">Coin B: 7 credits</string>
<string name="lives_2">Lives: 2</string>
<string name="lives_3">Lives: 3</string>
<string name="lives_4">Lives: 4</string>
<string name="lives_5">Lives: 5</string>
<string name="lives_6">Lives: 6</string>
<string name="lives_infinite">Lives: Infinite</string>
<string name="hiscoredip_0">High score: 0</string>
<string name="hiscoredip_5000">High score: 5000</string>
<string name="hiscoredip_7500">High score: 7500</string>
<string name="hiscoredip_10000">High score: 10000</string>
<string name="hiscoredip_12500">High score: 12500</string>
<string name="calibrationgrid">Calibration grid</string>
<string name="detectcollisions">Detect collisions</string>
<string name="freeze">Freeze</string>
<string name="rapidfire">Rapid fire</string>
<string name="autocoin">Insert coins automatically</string>
<string name="raoptions">RetroAchievements...</string>
<string name="raoptions2">RetroAchievements</string>
<string name="ra_on">Enabled: Yes</string>
<string name="ra_off">Enabled: No</string>
<string name="hardcore_on">Hardcore</string>
<string name="hardcore_off">Softcore</string>
<string name="username">Username:</string>
<string name="password">Password:</string>
<string name="darkenbg">Darken backgrounds</string>
<string name="flagline">Flag line emulation</string>
<string name="linebased">Line-based emulation</string>
<string name="pixelbased">Pixel-based emulation</string>
<string name="sameplayer">Same player for gamepad as for touch</string>
<string name="sensitivity_vlow">Sensitivity: Very low</string>
<string name="sensitivity_low">Sensitivity: Low</string>
<string name="sensitivity_medium">Sensitivity: Medium</string>
<string name="sensitivity_high">Sensitivity: High</string>
<string name="sensitivity_vhigh">Sensitivity: Very high</string>
<string name="multiplex">Sprites: Multiplex</string>
<string name="transparent">Sprites: Transparent</string>
<string name="opaque">Sprites: Opaque</string>
<string name="variant">Current variant</string>
</resources>
