<?xml version="1.0" encoding="iso-8859-1"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#444455"
        android:gravity="center_horizontal"
        android:id="@+id/about_root">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/about"
            android:layout_marginTop="10dp"
        />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/logo"
        />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:src="@drawable/amigan"
            />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="DroidArcadia"
                    android:id="@+id/about_nameandversion"
                    android:gravity="center_horizontal"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:text="-"
                    android:gravity="center_horizontal"
                    android:id="@+id/about_releasedate"
                />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/copyright"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/translator"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/compiler"
            android:gravity="center_horizontal"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/runningon"
            android:gravity="center_horizontal"
            android:id="@+id/about_runningon"
        />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/architecture"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:id="@+id/about_cpu"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="http://amigan.1emu.net/releases/"
                android:id="@+id/link1_button"
                android:padding="5dp"
                android:background="#aaaaff"
                android:gravity="center"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="http://amigan.yatho.com"
                android:id="@+id/link2_button"
                android:padding="5dp"
                android:background="#aaffaa"
                android:gravity="center"
            />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
