<?xml version="1.0" encoding="iso-8859-1"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_ra"
        android:background="#444455"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="24sp"
            android:text="@string/raoptions2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
        />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/ra_off"
            android:id="@+id/switch_cheevos"
            android:padding="10dp"
            android:background="#aaaaaa"
            android:gravity="left"
            android:layout_marginBottom="1dp"
            android:thumbTint="@color/black"
        />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/hardcore_off"
            android:id="@+id/switch_hardcore"
            android:padding="10dp"
            android:background="#aaaaaa"
            android:gravity="left"
            android:layout_marginBottom="10dp"
            android:thumbTint="@color/black"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="#ddcccc"
            android:layout_marginBottom="1dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="Username:"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/username"
            />
            <EditText
                android:id="@+id/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter username"
                android:importantForAutofill="no"
                android:padding="10dp"
                android:textColor="#000000"
                android:inputType="text"
                android:imeOptions="actionNext"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="#ddcccc"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:text="Password:"
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="8dp"
                android:labelFor="@id/password"
            />
            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Enter password"
                android:importantForAutofill="no"
                android:padding="10dp"
                android:textColor="#000000"
                android:inputType="text"
                android:imeOptions="actionDone"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:background="#444455"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/image_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
            />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:background="#444455"
                android:gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:id="@+id/button_userlink"
                    android:text="-"
                    android:padding="5dp"
                    android:background="#aaaaff"
                    android:gravity="center"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:id="@+id/button_gamelink"
                    android:text="-"
                    android:padding="5dp"
                    android:background="#aaffaa"
                    android:gravity="center"
                />
            </LinearLayout>
        </LinearLayout>
        
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/back"
            android:id="@+id/button_back"
            android:padding="10dp"
            android:background="#ddcccc"
            android:gravity="left"
        />

    </LinearLayout>
</ScrollView>
